Resolve overflow bug
Fix design bug which allows user to scroll in the header.

--- a/frontend/src/components/Header.module.scss
+++ b/frontend/src/components/Header.module.scss
@@ -54,7 +54,7 @@
     // Item positioning
     display: flex;
     align-items: center;
-    overflow-x: hidden;
+    overflow: hidden;
 
     .bar {
         position: absolute;
